[gd_scene load_steps=5 format=2]

[ext_resource path="res://AlgorithmScenes/Screen/slot.gd" type="Script" id=1]
[ext_resource path="res://Assets/textures/structure_slot_background.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 10.0
content_margin_right = 50.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.87451, 0.815686, 0.196078, 0.862745 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 2

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 38.5, 38 )

[node name="Slot" type="Area2D"]
script = ExtResource( 1 )

[node name="SlotTexture" type="TextureRect" parent="."]
margin_right = 80.0
margin_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 49.1249, 11.359 )
mouse_filter = 2
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true

[node name="BelowADTName" type="Label" parent="SlotTexture"]
margin_left = 20.602
margin_top = 80.0
margin_right = 60.602
margin_bottom = 94.0
text = "Queue"

[node name="HoverPanel" type="Node2D" parent="."]
visible = false
position = Vector2( 19.5854, 19.5854 )
z_index = 2
z_as_relative = false

[node name="ColorRect" type="Panel" parent="HoverPanel"]
margin_left = 11.0
margin_top = 5.0
margin_right = 144.0
margin_bottom = 159.0
rect_clip_content = true
mouse_filter = 2
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoverText" type="Label" parent="HoverPanel/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -21.5
margin_top = 10.0
margin_right = 21.5
margin_bottom = 24.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Queue"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlaceholder" type="Node2D" parent="HoverPanel/ColorRect"]
position = Vector2( 40, 30 )

[node name="ADTTexture" type="TextureRect" parent="."]
margin_right = 80.0
margin_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 80, 80 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 40.5, 40 )
shape = SubResource( 4 )

[connection signal="input_event" from="." to="." method="_on_Slot_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Slot_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Slot_mouse_exited"]
